--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2128,6 +2128,9 @@
     <ClInclude Include="Library\double.h">
       <Filter>Library\Data Structure</Filter>
     </ClInclude>
+    <ClInclude Include="Library\topo_sort.h">
+      <Filter>Library\Graph Theory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="output.txt">
