--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2075,6 +2075,9 @@
     <ClCompile Include="UVa\10200\10258.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10305.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
