--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2096,6 +2096,9 @@
     <ClCompile Include="UVa\100\103.cpp">
       <Filter>UVaOJ\100\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\437.cpp">
+      <Filter>UVaOJ\400\430</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
