--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2102,6 +2102,9 @@
     <ClCompile Include="UVa\10100\10147.cpp">
       <Filter>UVaOJ\10100\10140</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10369.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
