--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2105,6 +2105,9 @@
     <ClCompile Include="UVa\10300\10369.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10397.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
