--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2108,6 +2108,9 @@
     <ClCompile Include="UVa\10300\10397.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10600.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
