--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -2274,6 +2274,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10976.cpp" />
     <ClCompile Include="UVa\10900\10986.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -2591,6 +2592,7 @@
     <None Include="UVa\10500\10579.py" />
     <None Include="UVa\10800\10814.py" />
     <None Include="UVa\10900\10925.py" />
+    <None Include="UVa\10900\10976.py" />
     <None Include="UVa\11100\11115.py" />
     <None Include="UVa\11600\11609.py" />
     <None Include="UVa\11800\11827.py" />
